# lab

./: README.md
art_of_assembly/: hw64.asm
art_of_assembly/data_representation_and_operations/: generic_driver.cpp  hex.asm  logical_ops.asm  packed_data.asm  twos_complement.asm
art_of_assembly/hello_world/: anatomy.asm  called_from_c.asm  define_proc.asm  hello_world.asm  hello_world_driver.c  main.c  return_value_to_c.asm
command_line_rust/catr/: Cargo.toml  mk-outs
command_line_rust/catr/src/: lib.rs  main.rs
command_line_rust/catr/tests/: cli.rs
command_line_rust/headr/: Cargo.toml  mk-outs
command_line_rust/headr/src/: lib.rs  main.rs
command_line_rust/headr/tests/: cli.rs
command_line_rust/headr/tests/expected/: all.c1.out  all.c2.out  all.c4.out  all.n2.out  all.n4.out  all.out
elixir_in_action/: calculator.ex  comprehensions.exs  file_streams.exs  fraction.exs  key_value_gen_server.exs  loops.exs  process.exs  process_bottleneck.exs  server_process.exs  stateful_server_process.exs  streams.exs  tasks.exs  test_file.txt  todo.exs  todo_gen_server.exs  todo_server.exs  todo_server_generic.exs  todos.csv
mostly_adequate_guide/: README.md
programming_elixir/: buggy.exs  case.exs  case1.exs  case2.exs  countdown.exs  fizzbuzz.exs  fizzbuzz2.exs  fizzbuzz3.exs  generator.exs  lazy.exs  longest_line.exs  longest_line_stream.exs  my_list.exs  nested_dynamic.exs  nested_dynamic_access.exs  nested_dynamic_access2.exs  nested_dynamic_access3.exs  nested_dynamic_func.exs  not_lazy.exs  parse.exs  query.exs  stream.exs  structs2.exs  utf-iterate.exs
(+610 files in other folders)
